<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/waterfallv"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Login"
    tools:showIn="@layout/activity_user_register">

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textColor="@color/White"
        android:textSize="40sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/edtxtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/User"
        android:inputType="textPersonName"
        android:textColor="@color/White"
        android:textColorHint="@color/White" />

    <EditText
        android:id="@+id/edtxtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColor="@color/White"
        android:textColorHint="@color/White" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.80"
        android:background="@android:drawable/title_bar"
        android:onClick="onClickRegisterUser"
        android:padding="10dp"
        android:text="@string/newUser"
        android:textColor="@color/White" />

    <Button
        android:id="@+id/btnStartQuiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.80"
        android:background="@android:drawable/title_bar"
        android:onClick="onClickStartQuiz"
        android:padding="10dp"
        android:text="@string/begin"
        android:textColor="@color/White" />

</LinearLayout>