<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/starfield"
    tools:context=".EndGameScreen"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="264dp"
        android:layout_height="125dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtCurrentScore"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:alpha="0.75"
            android:background="@color/Black"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/your_score"
            android:textColor="@color/White"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtHighScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.75"
            android:background="@color/Black"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/highest_score"
            android:textColor="@color/White"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/btnPlayAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/Black"
        android:gravity="center_vertical|center"
        android:onClick="onClickPlayAgain"
        android:text="@string/play_again"
        android:textColor="@color/White"
        android:textStyle="bold"
        android:alpha="0.75"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.028" />

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="8dp"
        android:background="@color/Black"
        android:onClick="onClickLogOut"
        android:text="@string/logout"
        android:textColor="@color/White"
        android:textStyle="bold"
        android:alpha="0.75"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.028" />

    <Button
        android:id="@+id/btnHighScores"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:background="@color/Black"
        android:onClick="onClickHighScores"
        android:text="@string/highScores"
        android:textColor="@color/White"
        android:alpha="0.75"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogOut" />
</android.support.constraint.ConstraintLayout>